--- a/apps.html
+++ b/apps.html
@@ -674,36 +674,37 @@
 	</section>
 -->
 
-<footer class="neFooter apps">
-	<div class="neFooterContent">
-		<div class="footerAgit" style="">
-			<h1>Готов себя попробовать? Тогда вперед!</h1>
-			<p>Тысячи игроков ждут тебя на поле боя</p>
-			<a href="https://my.playstrike.ru/auth/signup" class="button_yellow">Начать играть</a>
-		</div>
-		<div class="footerLink">
-			<div class="footerLinkContent">
-				<div class="logoFooter"><img src="assets/img/icons/playstrike.png" alt=""></div>
-				<div class="documents">
-				<a href="/privacy.html">Пользовательское соглашение</a>
-				</div>
+	<footer class="neFooter apps">
+		<div class="neFooterContent">
+			<div class="footerAgit" style="">
+				<h1>Готов себя попробовать? Тогда вперед!</h1>
+				<p>Тысячи игроков ждут тебя на поле боя</p>
+				<a href="https://my.playstrike.ru/auth/signup" class="button_yellow">Начать играть</a>
+			</div>
+			<div class="footerLink">
+				<div class="footerLinkContent">
+					<div class="logoFooter"><img src="assets/img/icons/playstrike.png" alt=""></div>
+					<div class="documents">
+						<a href="/privacy.html">Пользовательское соглашение</a>
+						<a href="Playstrike_brandbook.pdf" target='_blank'>Презентация</a>
+					</div>
 
-				<div class="footer__links">
-					<a href="https://t.me/PlayStrike">
-						<img src="./assets/img/icons/tg.svg" alt="">
-					</a>
-					<a href="https://vk.com/playstrike">
-						<img src="./assets/img/icons/vk.svg" alt="">
-					</a>
-					<a href="https://rutube.ru/channel/24737596/">
-						<img src="./assets/img/icons/rt.svg" alt="">
-					</a>
+					<div class="footer__links">
+						<a href="https://t.me/PlayStrike">
+							<img src="./assets/img/icons/tg.svg" alt="">
+						</a>
+						<a href="https://vk.com/playstrike">
+							<img src="./assets/img/icons/vk.svg" alt="">
+						</a>
+						<a href="https://rutube.ru/channel/24737596/">
+							<img src="./assets/img/icons/rt.svg" alt="">
+						</a>
+					</div>
+					<span>2022 © Playstrike.ru</span>
 				</div>
-				<span>2022 © Playstrike.ru</span>
 			</div>
 		</div>
-	</div>
-</footer>
+	</footer>
 
 
 	<!--
