--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
 					</div>
 					<div class="step_video">
 						<div class="step_info">
-							<img src="assets/img/backgrounds/video.png" alt="">
+							<iframe src="https://www.youtube.com/embed/edYCtaNueQY" title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
