--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
 							<div class="documents">
 								<a href="/privacy.html">Пользовательское соглашение</a>
 								<a href="Playstrike_brandbook.pdf" target='_blank'>Презентация</a>
+								<a href="/contacts.html">Контакты</a>
 							</div>
 
 							<div class="footer__links">
