--- a/privacy.html
+++ b/privacy.html
@@ -233,6 +233,7 @@
 					<div class="documents">
 						<a href="/privacy.html">Пользовательское соглашение</a>
 						<a href="Playstrike_brandbook.pdf" target='_blank'>Презентация</a>
+						<a href="/contacts">Контакты</a>
 					</div>
 					<div class="footer__links">
 						<a href="https://t.me/PlayStrike">
