--- a/contacts.html
+++ b/contacts.html
@@ -45,7 +45,7 @@
 		<div class="container">
             <h1>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ПЛЭЙСТРАЙК"</h1>
             <p>
-            <span>Юридический адрес компании: переулок Электрический, д. Д.3/10, корп./ст. СТР. 1, кв./оф. ЭТАЖ/ПОМЕЩ. 5/I, КОМ./ОФИС 3/А6Ю, г. Москва</span>   
+            <span>Юридический адрес компании: переулок Электрический, <!--д.д.-->Д.3/10, корп./ст. СТР. 1, кв./оф. ЭТАЖ/ПОМЕЩ. 5/I, КОМ./ОФИС 3/А6Ю, г. Москва</span>   
            <ul>
             <li>ИНН: 9703033430</li>
             <li>КПП: 770301001</li>
@@ -54,7 +54,7 @@
             <li>Кор. счёт: 30101810200000000593 </li>
            </ul>
             </p> 
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa5914daae1eef32dce5e3d7627ca825ba2f9d0ed2cf4bd56603f01173b610537&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa5914daae1eef32dce5e3d7627ca825ba2f9d0ed2cf4bd56603f01173b610537&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 		</div>
         
 	</section>
